[package]
name = "game_logic"
version = "0.0.1"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]

[lib]
name = "game_logic"
path = "src/lib.rs"

##############################################
#                  Crates                    #
##############################################

[dependencies.game_models]
path = "../game_models"

##############################################
#               Dependencies                 #
##############################################

# Main dependency for the project. This is absolutely needed for work with
# graphics and systems. If you change the Version, make sure that you change it
# in all crates of the project!
[dependencies.bevy]
version = "0.17.3"
default-features = true

# Fetch system information for windows, linux and Mac
[dependencies.sysinfo]
version = "0.37.2"