[package]
name = "game_ui"
version = "0.0.1"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]

[lib]
name = "game_ui"
path = "src/lib.rs"

##############################################
#               Dependencies                 #
##############################################

# Main dependency for the project. This is absolutely needed for work with
# graphics and systems. If you change the Version, make sure that you change it
# in all crates of the project!
[dependencies.bevy]
version = "0.17.3"
default-features = true

[dependencies.bevy_extended_ui]
version = "1.0.0"

[dependencies.bevy_extended_ui_macros]
version = "1.0.0"